--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+*{
+    font-size: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: #0d1b2a;
+    color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Header{
+    width: 90%;
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.Header h1{
+    font-size: 54px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header button{
+    height: 50px;
+    width: 200px;
+    background: #0A68FF;
+    cursor: pointer;
+    color: #ffffff;
+    border-radius: 5px;
+}
+
+.Header button:hover{
+    background: #003FA3;
+}
+
+.Items{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+}
+
+.Item{
+    background-color: #1b263b;
+    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px #0D121C;
+}
+
+.Item h2{
+    font-size: 28px;
+}
+
+.Item p{
+    margin: 20px 0;
+}
+
+.Item a{
+    text-decoration: none;
+    color: #0A68FF;
+}
+
+.Item a:hover{
+    text-decoration: underline;
+    color: #003FA3;
+}
+
+.Item img{
+    margin-top: 20px;
+    display: block;
+    height: 500px;
+    object-fit: cover;
 }
